# Team_ML10

./: .gitignore  README.md  SETUP.md  Term_deposit_analyis_.ipynb  bank_architect.ipynb  main.ipynb  pyproject.toml  scenarios.ipynb
Jesse/: bank_data_full_stats_41188.pptx  bank_data_stats_4119.pptx
Jesse/Code/: ML_10_JS.ipynb
Team_ML_10.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code/: code.ipynb
experiments/: experiments.ipynb
reports/: Bank_Campaign_Presentation.pptx  Bank_Campaign_Presentation_F.pptx
src/: Bank_Campaign_Presentation_F.pptx  ML_10_JS.ipynb  MyCode1.ipynb  RandomF.ipynb  bank_architect.ipynb  code.ipynb  data-analysis.ipynb  main.ipynb
